@@ -218,6 +218,7 @@
 						<testOutputDir>${project.build.directory}</testOutputDir>
 
 					</systemPropertyVariables>
+                                        <argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
